Fix: position theme toggle on mobile devices

--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -7,6 +7,6 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 48px;
+    right: 16px;
   }
 }
